force-app/main/default/objects/Position__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <label>Edad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-20</fullName>
                <default>true</default>
                <label>18-20</label>
            </value>
            <value>
                <fullName>20-25</fullName>
            </value>
            <value>
                <fullName>25-30</fullName>
            </value>
            <value>
                <fullName>30-35</fullName>
            </value>
            <value>
                <fullName>35-40</fullName>
            </value>
            <value>
                <fullName>40-45</fullName>
            </value>
            <value>
                <fullName>45-50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>