force-app/main/default/objects/Position__c/fields/Estudios__c.field-meta.xml
<CustomField>
    <fullName>Estudios__c</fullName>
    <label>Estudios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin especificar</fullName>
                <default>true</default>
                <label>Sin especificar</label>
            </value>
            <value>
                <fullName>Secundario</fullName>
            </value>
            <value>
                <fullName>Terciario</fullName>
            </value>
            <value>
                <fullName>Universitario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>