force-app/main/default/objects/Position__c/fields/Nivel_UML__c.field-meta.xml
<CustomField>
    <fullName>Nivel_UML__c</fullName>
    <label>Nivel UML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>