force-app/main/default/objects/Position__c/fields/Tegnologia_desarrollo__c.field-meta.xml
<CustomField>
    <fullName>Tegnologia_desarrollo__c</fullName>
    <label>Tegnologia desarrollo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>