force-app/main/default/objects/Position__c/recordTypes/Funcionales.recordType-meta.xml
<RecordType>
    <fullName>Funcionales</fullName>
    <active>true</active>
    <label>Funcionales</label>
</RecordType>