force-app/main/default/objects/Position__c/recordTypes/Position123.recordType-meta.xml
<RecordType>
    <fullName>Position123</fullName>
    <active>true</active>
    <label>Position123</label>
</RecordType>